# coloropt

./: README.md  pyproject.toml
coloropt/: __init__.py  core.py  gradient.py  grid.py  visualization.py
examples/: color_comparison_example.ipynb  color_gd_example.ipynb  color_grid_example.ipynb  compare_with_distinctipy.ipynb
